--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
 # Epidemic Simulator Requirements
 
-# Core scientific computing
 numpy>=1.21.0
 scipy>=1.7.0
 
 # Visualization
 matplotlib>=3.4.0
+seaborn>=0.11.0
 
-# Optional: Network analysis (for network-based models)
+# Network analysis
 networkx>=2.6.0
 
-# Optional: Data handling
+# Data handling
 pandas>=1.3.0
 
-# Optional: Progress bars
+# Progress bars
 tqdm>=4.62.0
-
-# Optional: Additional visualization
-seaborn>=0.11.0
